crates/crochet_parser/src/snapshots/crochet_parser__tests__pattern_matching-3.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(r#\"\n            let bar = match (foo) {\n                n is number -> \"number\",\n                {a: a is Array} -> \"Array\",\n                _ -> \"fallthrough\"\n            };\n            \"#)"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 13..171,
                pattern: Pattern {
                    span: 17..20,
                    kind: Ident(
                        BindingIdent {
                            name: "bar",
                            mutable: false,
                            span: 17..20,
                        },
                    ),
                    inferred_type: None,
                },
                type_ann: None,
                init: Some(
                    Expr {
                        span: 23..170,
                        kind: Match(
                            Match {
                                expr: Expr {
                                    span: 30..33,
                                    kind: Ident(
                                        Ident {
                                            span: 30..33,
                                            name: "foo",
                                        },
                                    ),
                                    inferred_type: None,
                                },
                                arms: [
                                    Arm {
                                        span: 53..76,
                                        pattern: Pattern {
                                            span: 53..64,
                                            kind: Is(
                                                IsPat {
                                                    ident: BindingIdent {
                                                        name: "n",
                                                        mutable: false,
                                                        span: 53..54,
                                                    },
                                                    is_id: Ident {
                                                        span: 58..64,
                                                        name: "number",
                                                    },
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                        guard: None,
                                        body: Expr {
                                            span: 68..76,
                                            kind: Lit(
                                                Str(
                                                    Str {
                                                        span: 68..76,
                                                        value: "number",
                                                    },
                                                ),
                                            ),
                                            inferred_type: None,
                                        },
                                    },
                                    Arm {
                                        span: 94..120,
                                        pattern: Pattern {
                                            span: 94..109,
                                            kind: Object(
                                                ObjectPat {
                                                    props: [
                                                        KeyValue(
                                                            KeyValuePatProp {
                                                                key: Ident {
                                                                    span: 95..96,
                                                                    name: "a",
                                                                },
                                                                value: Pattern {
                                                                    span: 98..108,
                                                                    kind: Is(
                                                                        IsPat {
                                                                            ident: BindingIdent {
                                                                                name: "a",
                                                                                mutable: false,
                                                                                span: 98..99,
                                                                            },
                                                                            is_id: Ident {
                                                                                span: 103..108,
                                                                                name: "Array",
                                                                            },
                                                                        },
                                                                    ),
                                                                    inferred_type: None,
                                                                },
                                                                init: None,
                                                                span: 95..108,
                                                            },
                                                        ),
                                                    ],
                                                    optional: false,
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                        guard: None,
                                        body: Expr {
                                            span: 113..120,
                                            kind: Lit(
                                                Str(
                                                    Str {
                                                        span: 113..120,
                                                        value: "Array",
                                                    },
                                                ),
                                            ),
                                            inferred_type: None,
                                        },
                                    },
                                    Arm {
                                        span: 138..156,
                                        pattern: Pattern {
                                            span: 138..139,
                                            kind: Wildcard,
                                            inferred_type: None,
                                        },
                                        guard: None,
                                        body: Expr {
                                            span: 143..156,
                                            kind: Lit(
                                                Str(
                                                    Str {
                                                        span: 143..156,
                                                        value: "fallthrough",
                                                    },
                                                ),
                                            ),
                                            inferred_type: None,
                                        },
                                    },
                                ],
                            },
                        ),
                        inferred_type: None,
                    },
                ),
                declare: false,
            },
        ],
    },
)
