crates/crochet_parser/src/snapshots/crochet_parser__tests__pattern_matching-4.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(r#\"\n            let bar = match (foo) {\n                1 -> \"one\",\n                2 -> \"two\",\n                n if (n < 5) -> \"few\",\n                _ -> \"many\"\n            };\n            \"#)"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 13..174,
                pattern: Ident(
                    BindingIdent {
                        span: 17..20,
                        id: Ident {
                            span: 17..20,
                            name: "bar",
                        },
                    },
                ),
                type_ann: None,
                init: Some(
                    Match(
                        Match {
                            span: 23..173,
                            expr: Ident(
                                Ident {
                                    span: 30..33,
                                    name: "foo",
                                },
                            ),
                            arms: [
                                Arm {
                                    span: 53..63,
                                    pattern: Lit(
                                        LitPat {
                                            span: 53..54,
                                            lit: Num(
                                                Num {
                                                    span: 53..54,
                                                    value: "1",
                                                },
                                            ),
                                        },
                                    ),
                                    guard: None,
                                    body: Lit(
                                        Str(
                                            Str {
                                                span: 58..63,
                                                value: "one",
                                            },
                                        ),
                                    ),
                                },
                                Arm {
                                    span: 81..91,
                                    pattern: Lit(
                                        LitPat {
                                            span: 81..82,
                                            lit: Num(
                                                Num {
                                                    span: 81..82,
                                                    value: "2",
                                                },
                                            ),
                                        },
                                    ),
                                    guard: None,
                                    body: Lit(
                                        Str(
                                            Str {
                                                span: 86..91,
                                                value: "two",
                                            },
                                        ),
                                    ),
                                },
                                Arm {
                                    span: 109..130,
                                    pattern: Ident(
                                        BindingIdent {
                                            span: 109..110,
                                            id: Ident {
                                                span: 109..110,
                                                name: "n",
                                            },
                                        },
                                    ),
                                    guard: Some(
                                        BinaryExpr(
                                            BinaryExpr {
                                                span: 115..120,
                                                op: Lt,
                                                left: Ident(
                                                    Ident {
                                                        span: 115..116,
                                                        name: "n",
                                                    },
                                                ),
                                                right: Lit(
                                                    Num(
                                                        Num {
                                                            span: 119..120,
                                                            value: "5",
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                    ),
                                    body: Lit(
                                        Str(
                                            Str {
                                                span: 125..130,
                                                value: "few",
                                            },
                                        ),
                                    ),
                                },
                                Arm {
                                    span: 148..159,
                                    pattern: Wildcard(
                                        WildcardPat {
                                            span: 148..149,
                                        },
                                    ),
                                    guard: None,
                                    body: Lit(
                                        Str(
                                            Str {
                                                span: 153..159,
                                                value: "many",
                                            },
                                        ),
                                    ),
                                },
                            ],
                        },
                    ),
                ),
                declare: false,
            },
        ],
    },
)
