crates/crochet_parser/src/snapshots/crochet_parser__tests__pattern_matching.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(r#\"match expr {\n                a is string => a.length,\n                {x: b} => b,\n                c if c.id == 0 => c.value,\n                _ => 0,\n            }\"#)"
---
Program {
    body: [
        Expr {
            span: 0..163,
            expr: Match(
                Match {
                    span: 0..163,
                    expr: Ident(
                        Ident {
                            span: 6..10,
                            name: "expr",
                        },
                    ),
                    arms: [
                        Arm {
                            span: 29..52,
                            pattern: Is(
                                IsPat {
                                    span: 29..40,
                                    id: Ident {
                                        span: 29..30,
                                        name: "a",
                                    },
                                    is_id: Ident {
                                        span: 34..40,
                                        name: "string",
                                    },
                                },
                            ),
                            guard: None,
                            expr: Member(
                                Member {
                                    span: 44..52,
                                    obj: Ident(
                                        Ident {
                                            span: 44..45,
                                            name: "a",
                                        },
                                    ),
                                    prop: Ident(
                                        Ident {
                                            span: 45..52,
                                            name: "length",
                                        },
                                    ),
                                },
                            ),
                        },
                        Arm {
                            span: 70..81,
                            pattern: Object(
                                ObjectPat {
                                    span: 70..77,
                                    props: [
                                        KeyValue(
                                            KeyValuePatProp {
                                                key: Ident {
                                                    span: 71..72,
                                                    name: "x",
                                                },
                                                value: Ident(
                                                    BindingIdent {
                                                        span: 74..75,
                                                        id: Ident {
                                                            span: 74..75,
                                                            name: "b",
                                                        },
                                                        type_ann: None,
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                    optional: false,
                                    type_ann: None,
                                },
                            ),
                            guard: None,
                            expr: Ident(
                                Ident {
                                    span: 80..81,
                                    name: "b",
                                },
                            ),
                        },
                        Arm {
                            span: 99..124,
                            pattern: Ident(
                                BindingIdent {
                                    span: 99..100,
                                    id: Ident {
                                        span: 99..100,
                                        name: "c",
                                    },
                                    type_ann: None,
                                },
                            ),
                            guard: Some(
                                Op(
                                    Op {
                                        span: 104..113,
                                        op: EqEq,
                                        left: Member(
                                            Member {
                                                span: 104..108,
                                                obj: Ident(
                                                    Ident {
                                                        span: 104..105,
                                                        name: "c",
                                                    },
                                                ),
                                                prop: Ident(
                                                    Ident {
                                                        span: 105..108,
                                                        name: "id",
                                                    },
                                                ),
                                            },
                                        ),
                                        right: Lit(
                                            Num(
                                                Num {
                                                    span: 112..113,
                                                    value: "0",
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ),
                            expr: Member(
                                Member {
                                    span: 117..124,
                                    obj: Ident(
                                        Ident {
                                            span: 117..118,
                                            name: "c",
                                        },
                                    ),
                                    prop: Ident(
                                        Ident {
                                            span: 118..124,
                                            name: "value",
                                        },
                                    ),
                                },
                            ),
                        },
                        Arm {
                            span: 142..148,
                            pattern: Wildcard(
                                WildcardPat {
                                    span: 142..144,
                                },
                            ),
                            guard: None,
                            expr: Lit(
                                Num(
                                    Num {
                                        span: 147..148,
                                        value: "0",
                                    },
                                ),
                            ),
                        },
                    ],
                },
            ),
        },
    ],
}
