crates/crochet_parser/src/snapshots/crochet_parser__tests__strings-3.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"\\\"line 1\\\\nline 2\\\\nline 3\\\";\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..25,
                expr: Expr {
                    span: 0..24,
                    kind: Lit(
                        Str(
                            Str {
                                span: 0..24,
                                value: "line 1\nline 2\nline 3",
                            },
                        ),
                    ),
                },
            },
        ],
    },
)
